// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`blank > [] is not blank 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "raw": "[]",
        "text": "[]",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`blank > Blank in the [*** ] 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "raw": "[*** ",
        "text": "[*** ",
        "type": "plain",
      },
      {
        "raw": "[ ]",
        "text": " ",
        "type": "blank",
      },
      {
        "raw": "]",
        "text": "]",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`blank > Blank in the sentence 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "raw": "sentence",
        "text": "sentence",
        "type": "plain",
      },
      {
        "raw": "[ ]",
        "text": " ",
        "type": "blank",
      },
      {
        "raw": "sentence",
        "text": "sentence",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`blank > Multi char blank 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "raw": "[ 　 	　	 ]",
        "text": " 　 	　	 ",
        "type": "blank",
      },
    ],
    "type": "line",
  },
]
`;

exports[`blank > Simple double-byte space blank 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "raw": "[　]",
        "text": "　",
        "type": "blank",
      },
    ],
    "type": "line",
  },
]
`;

exports[`blank > Simple half-space blank 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "raw": "[ ]",
        "text": " ",
        "type": "blank",
      },
    ],
    "type": "line",
  },
]
`;

exports[`blank > Simple tab blank 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "raw": "[	]",
        "text": "	",
        "type": "blank",
      },
    ],
    "type": "line",
  },
]
`;
